--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html> 
-	<head><title>cyclones</title></head>
+	<head><title>email creation</title></head>
 	<body>
-	<h1><i>MICHAUNG</i></h1>
-	<img width="50%" src="cyclone.jpeg">
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/sKwjyXkyHHE?si=tYiq5cyUFzBUnKDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>	
+	<h1><i>email creation</i></h1>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/Cu9SmCXnscM?si=MYACkmIu-x7HqPQ-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<a href="https://youtu.be/Cu9SmCXnscM?feature=shared">click here</a>
 	</body>
 </html>
