--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head><title>email creation</title></head>
 	<body>
 	<h1><i>email creation</i></h1>
-	<img width="50a" src="th.jpg">
+	<img width="50" src="th.jpg">
 	<img width="50" src="download.jpg"> 
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Cu9SmCXnscM?si=MYACkmIu-x7HqPQ-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <a href="https://youtu.be/Cu9SmCXnscM?feature=shared">click here</a>
